Admin ghosts can rotate objects with keybindings now

--- a/Resources/Prototypes/Entities/Structures/Doors/Firelocks/firelock.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Firelocks/firelock.yml
@@ -9,6 +9,7 @@
       flags:
       - Anchorable
     - type: Rotatable
+      rotateWhileAnchored: true
     - type: AtmosAlarmable
       syncWith:
         - FireAlarm
