--- a/Resources/Prototypes/_ST/Doors/base.yml
+++ b/Resources/Prototypes/_ST/Doors/base.yml
@@ -46,6 +46,8 @@
   - type: Damageable
     damageContainer: Inorganic
     damageModifierSet: Metallic
+  - type: Rotatable
+    rotateWhileAnchored: true
 
 - type: entity
   id: StellarAirlock
