Respritening - Meat Anom Mobs & Floor Layer, Ice Floor Layer & Tallmetal Wall Variants (#113)
* mobs (courtesy of frogoo) & schmeaty floor overlay

* ice crust, meat food

* my yaml so linter

* floor variants, wall variants

* rusty walls fix

--- a/Resources/Prototypes/Entities/Objects/Misc/ice_crust.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/ice_crust.yml
@@ -12,11 +12,11 @@
         Brute:
           collection: GlassBreak
     - type: Sprite
-      sprite: Objects/Misc/ice_crust.rsi
-      layers:
-        - state: ice
+      sprite: /Textures/_ST/Tileset/Floor/layer_ice.rsi # Begin Stellar
+      # layers:
+      #   - state: ice
       drawdepth: FloorObjects
-      color: "#ffffff44"
+      # color: "#ffffff44" # End Stellar
     - type: Clickable
     - type: Transform
       anchored: true
@@ -52,3 +52,14 @@
     - type: FrictionContacts
     - type: TileFrictionModifier
       modifier: 0.05
+    - type: PlacementReplacement # Begin Stellar
+      key: anomalyfloor
+    - type: IconSmooth
+      key: icefloor
+      base: floor
+    - type: RandomIconSmooth
+      randomStates:
+      - floor
+      - floorb
+      - floorc
+    - type: Appearance # End Stellar
