--- a/Resources/Prototypes/_ST/Floors/floors_misc.yml
+++ b/Resources/Prototypes/_ST/Floors/floors_misc.yml
@@ -123,3 +123,56 @@
     collection: BarestepWood
   itemDrop: FloorTileItemWood
   heatCapacity: 10000
+
+- type: entity
+  id: StellarFleshFloor
+  name: creeping flesh
+  description: Hideous!
+  placement:
+    mode: SnapgridCenter
+    snap:
+    - Wall
+  components:
+  - type: Clickable
+  - type: Physics
+    bodyType: Static
+  - type: Transform
+    anchored: true
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.5,-0.5,0.5,0.5"
+        layer:
+          - SlipLayer
+        mask:
+          - ItemMask
+        density: 7
+        hard: false
+  - type: FootstepModifier
+    footstepSoundCollection:
+      collection: FootstepBlood
+      params:
+        volume: 8
+  - type: Damageable
+    damageModifierSet: Wood
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 10
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: Sprite
+    sprite: /Textures/_ST/Tileset/Floor/layer_flesh.rsi
+    drawdepth: FloorObjects
+  - type: Icon
+    sprite: /Textures/_ST/Tileset/Floor/layer_flesh.rsi
+    state: full
+  - type: IconSmooth
+    key: meatfloor
+    base: floor
+  - type: PlacementReplacement
+    key: anomalyfloor
