--- a/Resources/Prototypes/_ST/Roles/Jobs/engineering.yml
+++ b/Resources/Prototypes/_ST/Roles/Jobs/engineering.yml
@@ -7,6 +7,7 @@
   id: StellarJobEngineeringEngineer
   name: stellar-job-name-engineer
   description: stellar-job-description-engineer
+  setPreference: true
   playTimeTracker: StellarTimeTrackerEngineeringEngineer
   # requirements:
   #   - !type:DepartmentTimeRequirement
