--- a/Resources/Prototypes/_ST/Roles/Jobs/medical.yml
+++ b/Resources/Prototypes/_ST/Roles/Jobs/medical.yml
@@ -7,6 +7,7 @@
   id: StellarJobMedicalDoctor
   name: stellar-job-name-doctor
   description: stellar-job-description-doctor
+  setPreference: true
   playTimeTracker: StellarTimeTrackerMedicalDoctor
   # requirements:
   #   - !type:DepartmentTimeRequirement
@@ -23,6 +24,7 @@
   id: StellarJobMedicalChemist
   name: stellar-job-name-chemist
   description: stellar-job-description-chemist
+  setPreference: true
   playTimeTracker: StellarTimeTrackerMedicalChemist
   # requirements:
   #   - !type:DepartmentTimeRequirement
@@ -39,6 +41,7 @@
   id: StellarJobMedicalParamedic
   name: stellar-job-name-paramedic
   description: stellar-job-description-paramedic
+  setPreference: true
   playTimeTracker: StellarTimeTrackerMedicalParamedic
   # requirements:
   #   - !type:DepartmentTimeRequirement
@@ -55,6 +58,7 @@
   id: StellarJobMedicalPsychologist
   name: stellar-job-name-psychologist
   description: stellar-job-description-psychologist
+  setPreference: true
   playTimeTracker: StellarTimeTrackerMedicalPsychologist
   # requirements:
   #   - !type:DepartmentTimeRequirement
