--- a/Resources/Prototypes/_ST/Roles/Jobs/security.yml
+++ b/Resources/Prototypes/_ST/Roles/Jobs/security.yml
@@ -7,6 +7,7 @@
   id: StellarJobSecurityOfficer
   name: stellar-job-name-officer
   description: stellar-job-description-officer
+  setPreference: true
   playTimeTracker: StellarTimeTrackerSecurityOfficer
   # requirements:
   #   - !type:DepartmentTimeRequirement
@@ -23,6 +24,7 @@
   id: StellarJobSecurityDetective
   name: stellar-job-name-detective
   description: stellar-job-description-detective
+  setPreference: true
   playTimeTracker: StellarTimeTrackerSecurityDetective
   # requirements:
   #   - !type:DepartmentTimeRequirement
@@ -39,6 +41,7 @@
   id: StellarJobSecurityWarden
   name: stellar-job-name-warden
   description: stellar-job-description-warden
+  setPreference: true
   playTimeTracker: StellarTimeTrackerSecurityWarden
   # requirements:
   #   - !type:DepartmentTimeRequirement
