--- a/Resources/Prototypes/_ST/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/_ST/Roles/Jobs/departments.yml
@@ -7,6 +7,7 @@
     id: StellarDepartmentCommand
     name: stellar-department-name-command
     description: stellar-department-description-command
+    editorHidden: false
     color: "#334E6D"
     roles:
     - StellarJobCommandCaptain
@@ -24,6 +25,7 @@
     id: StellarDepartmentSupply
     name: stellar-department-name-supply
     description: stellar-department-description-supply
+    editorHidden: false
     color: "#A46106"
     roles:
     - StellarJobSupplyJanitor
@@ -36,6 +38,7 @@
     id: StellarDepartmentService
     name: stellar-department-name-service
     description: stellar-department-description-service
+    editorHidden: false
     color: "#9FED58"
     weight: -1
     roles:
@@ -54,6 +57,7 @@
     id: StellarDepartmentScience
     name: stellar-department-name-science
     description: stellar-department-description-science
+    editorHidden: false
     color: "#D381C9"
     roles:
     - StellarJobScienceScientist
@@ -64,6 +68,7 @@
     id: StellarDepartmentSecurity
     name: stellar-department-name-security
     description: stellar-department-description-security
+    editorHidden: false
     color: "#DE3A3A"
     weight: 1
     roles:
@@ -77,6 +82,7 @@
     id: StellarDepartmentMedical
     name: stellar-department-name-medical
     description: stellar-department-description-medical
+    editorHidden: false
     color: "#52B4E9"
     roles:
     - StellarJobMedicalChemist
@@ -90,6 +96,7 @@
     id: StelalrDepartmentEngineering
     name: stellar-department-name-engineering
     description: stellar-department-description-engineering
+    editorHidden: false
     color: "#EFB341"
     roles:
     - StellarJobEngineeringEngineer
@@ -100,6 +107,7 @@
     id: StellarDepartmentSilicon
     name: stellar-department-name-silicon
     description: stellar-department-description-silicon
+    editorHidden: false
     color: "#D381C9"
     roles:
     - Borg
@@ -111,6 +119,7 @@
     id: StellarDepartmentIntern
     name: stellar-department-name-intern
     description: stellar-department-description-intern
+    editorHidden: false
     color: "#bbbbbb"
     roles:
     - StellarJobInternEngineering
