--- a/Resources/Prototypes/_ST/Floors/floors_glass_base.yml
+++ b/Resources/Prototypes/_ST/Floors/floors_glass_base.yml
@@ -5,6 +5,7 @@
 ##################### REGULAR GLASS
 - type: tile
   id: StellarFloorGlassBase
+  editorHidden: false
   name: st-floor-glass-base
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_base.png
   baseTurf: Plating
@@ -17,6 +18,7 @@
 
 - type: tile
   id: StellarFloorGlassDouble1
+  editorHidden: false
   name: st-floor-glass-double1
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_double_1.png
   baseTurf: Plating
@@ -29,6 +31,7 @@
 
 - type: tile
   id: StellarFloorGlassDouble2
+  editorHidden: false
   name: st-floor-glass-double2
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_double_2.png
   baseTurf: Plating
@@ -41,6 +44,7 @@
 
 - type: tile
   id: StellarFloorGlassMono
+  editorHidden: false
   name: st-floor-glass-mono
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_mono.png
   baseTurf: Plating
@@ -53,6 +57,7 @@
 
 - type: tile
   id: StellarFloorGlassMulti1
+  editorHidden: false
   name: st-floor-glass-multi1
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_multi_1.png
   baseTurf: Plating
@@ -65,6 +70,7 @@
 
 - type: tile
   id: StellarFloorGlassMulti2
+  editorHidden: false
   name: st-floor-glass-multi2
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_multi_2.png
   baseTurf: Plating
@@ -77,6 +83,7 @@
 
 - type: tile
   id: StellarFloorGlassFramedDouble1
+  editorHidden: false
   name: st-floor-glass-framed-double1
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_framed_double_1.png
   baseTurf: Plating
@@ -89,6 +96,7 @@
 
 - type: tile
   id: StellarFloorGlassFramedDouble2
+  editorHidden: false
   name: st-floor-glass-framed-double2
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_framed_double_2.png
   baseTurf: Plating
@@ -101,6 +109,7 @@
 
 - type: tile
   id: StellarFloorGlassFramedMono
+  editorHidden: false
   name: st-floor-glass-framed-mono
   sprite: /Textures/_ST/Tileset/Floor/Glass_Basic/glass_framed_mono.png
   baseTurf: Plating
