--- a/Resources/Prototypes/_ST/Floors/floors_glass_uranium.yml
+++ b/Resources/Prototypes/_ST/Floors/floors_glass_uranium.yml
@@ -5,6 +5,7 @@
 ##################### REGULAR GLASS
 - type: tile
   id: StellarFloorGlassUraniumBase
+  editorHidden: false
   name: st-floor-glass-uranium-base
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_base.png
   baseTurf: Plating
@@ -17,6 +18,7 @@
 
 - type: tile
   id: StellarFloorGlassUraniumDouble1
+  editorHidden: false
   name: st-floor-glass-uranium-double1
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_double_1.png
   baseTurf: Plating
@@ -29,6 +31,7 @@
 
 - type: tile
   id: StellarFloorGlassUraniumDouble2
+  editorHidden: false
   name: st-floor-glass-uranium-double2
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_double_2.png
   baseTurf: Plating
@@ -41,6 +44,7 @@
 
 - type: tile
   id: StellarFloorGlassUraniumMono
+  editorHidden: false
   name: st-floor-glass-uranium-mono
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_mono.png
   baseTurf: Plating
@@ -53,6 +57,7 @@
 
 - type: tile
   id: StellarFloorGlassUraniumMulti1
+  editorHidden: false
   name: st-floor-glass-uranium-multi1
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_multi_1.png
   baseTurf: Plating
@@ -65,6 +70,7 @@
 
 - type: tile
   id: StellarFloorGlassUraniumMulti2
+  editorHidden: false
   name: st-floor-glass-uranium-multi2
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_multi_2.png
   baseTurf: Plating
@@ -77,6 +83,7 @@
 
 - type: tile
   id: StellarFloorGlassUraniumFramedDouble1
+  editorHidden: false
   name: st-floor-glass-uranium-framed-double1
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_framed_double_1.png
   baseTurf: Plating
@@ -89,6 +96,7 @@
 
 - type: tile
   id: StellarFloorGlassUraniumFramedDouble2
+  editorHidden: false
   name: st-floor-glass-uranium-framed-double2
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_framed_double_2.png
   baseTurf: Plating
@@ -101,6 +109,7 @@
 
 - type: tile
   id: StellarFloorGlassUraniumFramedMono
+  editorHidden: false
   name: st-floor-glass-uranium-framed-mono
   sprite: /Textures/_ST/Tileset/Floor/Glass_Uranium/uraniumglass_framed_mono.png
   baseTurf: Plating
